--- a/MODAMSWeb/Areas/Users/Views/Home/Index.cshtml
+++ b/MODAMSWeb/Areas/Users/Views/Home/Index.cshtml
@@ -194,6 +194,7 @@
                             }
 
                         </tbody>
+                        
                     </table>
                 </div>
                 <div class="col-md-6 mt-5 container">
@@ -284,7 +285,7 @@
 
     <script>
         $(document).ready(function () {
-            makeDataTable('#tblCategories');
+            makeDataTable('#tblCategories','1', 1);
             pieChart();
         });
 
