--- a/MODAMSWeb/Areas/Users/Views/Transfers/EditTransfer.cshtml
+++ b/MODAMSWeb/Areas/Users/Views/Transfers/EditTransfer.cshtml
@@ -63,6 +63,7 @@
             <div class="card-body">
                 <form method="post" asp-action="EditTransfer" id="frmTransfer">
                     <input asp-for="Transfer.Id" hidden />
+                    <input type="hidden" id="selectedAssets" name="selectedAssets" />
                     <div class="row">
                         <div class="col-sm-8">
                             <div class="card">
@@ -133,25 +134,25 @@
                                                                             {
                                                                                 for (var i = 0; i < Model.Assets.Count(); i++)
                                                                                 {
-                                                                                    <tr>
+                                                                                            <tr>
 
-                                                                                        <td>
-                                                                                            <input asp-for="@Model.Assets[i].AssetId" hidden />
-                                                                                            <div class="col-auto">
-                                                                                                <label class="ckbox" asp-for="@Model.Assets[i].IsSelected">
-                                                                                                    <input onclick="return selectAsset(@Model.Assets[i].AssetId,this);"
-                                                                                                           type="checkbox" asp-for="@Model.Assets[i].IsSelected">
-                                                                                                    <span></span>
-                                                                                                </label>
-                                                                                            </div>
-                                                                                        </td>
-                                                                                        <td>@Model.Assets[i].Category</td>
-                                                                                        <td>@Model.Assets[i].Make</td>
-                                                                                        <td>@Model.Assets[i].Model</td>
-                                                                                        <td>@Model.Assets[i].AssetName</td>
-                                                                                        <td>@Model.Assets[i].SerialNumber</td>
-                                                                                        <td>@Model.Assets[i].Barcode</td>
-                                                                                    </tr>
+                                                                                                <td>
+                                                                                                    <input asp-for="@Model.Assets[i].AssetId" hidden />
+                                                                                                    <div class="col-auto">
+                                                                                                        <label class="ckbox" asp-for="@Model.Assets[i].IsSelected">
+                                                                                                            <input onclick="return selectAsset(@Model.Assets[i].AssetId,this);"
+                                                                                                                   type="checkbox" asp-for="@Model.Assets[i].IsSelected">
+                                                                                                            <span></span>
+                                                                                                        </label>
+                                                                                                    </div>
+                                                                                                </td>
+                                                                                                <td>@Model.Assets[i].Category</td>
+                                                                                                <td>@Model.Assets[i].Make</td>
+                                                                                                <td>@Model.Assets[i].Model</td>
+                                                                                                <td>@Model.Assets[i].AssetName</td>
+                                                                                                <td>@Model.Assets[i].SerialNumber</td>
+                                                                                                <td>@Model.Assets[i].Barcode</td>
+                                                                                            </tr>
                                                                                 }
                                                                             }
                                                                         }
@@ -178,22 +179,22 @@
                                         @{
                                             if (Model.Transfer.TransferStatusId == 1)
                                             {
-                                                <button type="submit" class="btn btn-primary " id="btnSubmit"><i class="fa fa-check-circle"></i>&nbsp;Save Transfer</button>
+                                                        <button type="submit" class="btn btn-primary " id="btnSubmit"><i class="fa fa-check-circle"></i>&nbsp;Save Transfer</button>
 
-                                                <button class="btn btn-secondary btn-secondary" data-bs-toggle="dropdown" aria-expanded="false">
-                                                    <i class="fe fe-trash"></i> Delete Transfer<i class="icon ion-ios-arrow-down text-12"></i>
-                                                </button>
+                                                        <button class="btn btn-secondary btn-secondary" data-bs-toggle="dropdown" aria-expanded="false">
+                                                            <i class="fe fe-trash"></i> Delete Transfer<i class="icon ion-ios-arrow-down text-12"></i>
+                                                        </button>
 
-                                                <div class="dropdown-menu" style="">
-                                                    <div class="p-2">
-                                                        <h4 class="dropdown-title">Delete Transfer</h4><br />
-                                                        <p>
-                                                            You will not be able to recover this transfer!<br /><br />Are you sure?
-                                                        </p>
-                                                            <a asp-area="Users" asp-action="DeleteTransfer" asp-controller="Transfers" asp-route-id="@Model.Transfer.Id" class="btn btn-default btn-sm"><i class="fe fe-trash"></i> Delete Transfer</a>
-                                                        
-                                                    </div>
-                                                </div>
+                                                        <div class="dropdown-menu" style="">
+                                                            <div class="p-2">
+                                                                <h4 class="dropdown-title">Delete Transfer</h4><br />
+                                                                <p>
+                                                                    You will not be able to recover this transfer!<br /><br />Are you sure?
+                                                                </p>
+                                                                    <a asp-area="Users" asp-action="DeleteTransfer" asp-controller="Transfers" asp-route-id="@Model.Transfer.Id" class="btn btn-default btn-sm"><i class="fe fe-trash"></i> Delete Transfer</a>
+                                                                
+                                                            </div>
+                                                        </div>
                                             }
                                         }
 
@@ -239,6 +240,7 @@
         let sData = '';
         let Data = null;
         let selection = [];
+        let selectionIds = [];
 
         $(document).ready(function () {
 
@@ -259,6 +261,7 @@
             $("#btnSubmit").on("click", (e) => {
                 e.preventDefault();
                 if (checkSelection()) {
+                    $("#selectedAssets").val(selectionIds.join(','));
                     $("#frmTransfer").submit();
                 } else {
                     notif({
@@ -276,6 +279,7 @@
             Data.forEach(function (e) {
                 if (e.isSelected == true) {
                     selection.push(e.make + " - " + e.assetName + " - " + e.serialNumber);
+                    selectionIds.push(e.assetId);
                 }
             });
 
@@ -302,11 +306,16 @@
                     if (isChecked) {
                         e.isSelected = true;
                         selection.push(e.make + " - " + e.assetName + " - " + e.serialNumber);
+                        selectionIds.push(id)
                     } else {
                         e.isSelected = false;
                         let index = selection.indexOf(e.make + " - " + e.assetName + " - " + e.serialNumber);
                         if (index !== -1) {
-                            selection.splice(index, 1);
+                            selection.splice(index, 1);    
+                        }
+                        index = selectionIds.indexOf(e.assetId);
+                        if (index !== -1) {
+                            selectionIds.splice(index, 1);
                         }
                     }
                 }
