--- a/MODAMSWeb/Areas/Users/Views/Assets/CreateAsset.cshtml
+++ b/MODAMSWeb/Areas/Users/Views/Assets/CreateAsset.cshtml
@@ -241,6 +241,7 @@
 @section scripts {
     <script>
         $(document).ready(() => {
+            hideMenu();
             $('.select2').select2();
 
             $("#btnSubmit").on("click", () => {
