--- a/MODAMSWeb/Areas/Users/Views/Assets/EditAsset.cshtml
+++ b/MODAMSWeb/Areas/Users/Views/Assets/EditAsset.cshtml
@@ -242,6 +242,8 @@
     <script src="~/assets/plugins/bootstrap-datepicker/js/datepicker.js"></script>
     <script>
         $(document).ready(() => {
+            hideMenu();
+
             $('.select2').select2();
 
             $("#btnSubmit").on("click", () => {
