--- a/MODAMSWeb/Areas/Users/Views/Home/Index.cshtml
+++ b/MODAMSWeb/Areas/Users/Views/Home/Index.cshtml
@@ -96,7 +96,7 @@
         </a>
     </div>
     <div class="col-md-3">
-        <a asp-area="Users" asp-controller="Home" asp-action="UnderConstruction" class="text-info">
+        <a asp-area="Users" asp-controller="Disposals" asp-action="Index" class="text-info">
             <div class="card divShadow">
                 <div class="card-status bg-info br-tr-7 br-tl-7"></div>
                 <div class="card-body pnlHeight">
