--- a/MODAMSWeb/Areas/Users/Views/Disposals/Index.cshtml
+++ b/MODAMSWeb/Areas/Users/Views/Disposals/Index.cshtml
@@ -19,8 +19,8 @@
                     @*<h4 class="m-0">@TempData["storeName"]</h4>*@
                     @* <h4 class="m-0">@TempData["SubCategoryName"] (Count: @Model.TotalAssets())</h4> *@
                     @* <select asp-for="@Model.SubCategoryId" asp-items="@Model.CategorySelectList"
-                            class="form-control select2 form-select">
-                        <option value="0">All Assets</option>
+                    class="form-control select2 form-select">
+                    <option value="0">All Assets</option>
                     </select> *@
                 </div>
             </div>
@@ -34,14 +34,68 @@
                 {
                     sDisabled = "";
                 }
-
-                <a asp-area="Users" asp-controller="Disposals" asp-action="CreateDisposal"
-                   asp-route-id="@Model.StoreId"
-                   class="btn btn-primary-gradient trShadow @sDisabled">
-                    <svg xmlns="http://www.w3.org/2000/svg" class="w-inner-icn text-white" enable-background="new 0 0 24 24" viewBox="0 0 24 24"><path d="M16,11.5h-3.5V8c0-0.276123-0.223877-0.5-0.5-0.5S11.5,7.723877,11.5,8v3.5H8c-0.276123,0-0.5,0.223877-0.5,0.5s0.223877,0.5,0.5,0.5h3.5v3.5005493C11.5001831,16.2765503,11.723999,16.5001831,12,16.5h0.0006104C12.2765503,16.4998169,12.5001831,16.276001,12.5,16v-3.5H16c0.276123,0,0.5-0.223877,0.5-0.5S16.276123,11.5,16,11.5z M12,2C6.4771729,2,2,6.4771729,2,12s4.4771729,10,10,10c5.5202026-0.0062866,9.9937134-4.4797974,10-10C22,6.4771729,17.5228271,2,12,2z M12,21c-4.9705811,0-9-4.0294189-9-9s4.0294189-9,9-9c4.9682617,0.0056152,8.9943848,4.0317383,9,9C21,16.9705811,16.9705811,21,12,21z" /></svg>
-                    New Disposal
-                </a>
             }
         </div>
     </div>
+    <div class="col-12 col-sm-12">
+        <div class="card">
+            <div class="card-body project-list-table-container">
+                <a asp-area="Users" asp-controller="Disposals" asp-action="CreateDisposal"
+                   asp-route-id="@Model.StoreId"
+                   class="btn btn-primary-gradient trShadow @sDisabled mb-2">
+                    <svg xmlns="http://www.w3.org/2000/svg" class="w-inner-icn text-white" enable-background="new 0 0 24 24" viewBox="0 0 24 24"><path d="M16,11.5h-3.5V8c0-0.276123-0.223877-0.5-0.5-0.5S11.5,7.723877,11.5,8v3.5H8c-0.276123,0-0.5,0.223877-0.5,0.5s0.223877,0.5,0.5,0.5h3.5v3.5005493C11.5001831,16.2765503,11.723999,16.5001831,12,16.5h0.0006104C12.2765503,16.4998169,12.5001831,16.276001,12.5,16v-3.5H16c0.276123,0,0.5-0.223877,0.5-0.5S16.276123,11.5,16,11.5z M12,2C6.4771729,2,2,6.4771729,2,12s4.4771729,10,10,10c5.5202026-0.0062866,9.9937134-4.4797974,10-10C22,6.4771729,17.5228271,2,12,2z M12,21c-4.9705811,0-9-4.0294189-9-9s4.0294189-9,9-9c4.9682617,0.0056152,8.9943848,4.0317383,9,9C21,16.9705811,16.9705811,21,12,21z" /></svg>
+                    New Disposal
+                </a>
+                <div class="table-responsive export-table">
+                    <table id="tblDisposals" class="table text-nowrap mb-0 table-bordered key-buttons border-top border-bottom project-list-main">
+                        <thead class="bg-primary-gradient ms-auto divShadow">
+                            <tr>
+                                <th class="text-white bg-transparent border-bottom-0 w-5">S.No</th>
+                                <th class="text-white bg-transparent border-bottom-0 w-10">Date</th>
+                                <th class="text-white bg-transparent border-bottom-0 w-10">Disposal Type</th>
+                                <th class="text-white bg-transparent border-bottom-0 w-10">Category</th>
+                                <th class="text-white bg-transparent border-bottom-0 w-10">Make</th>
+                                <th class="text-white bg-transparent border-bottom-0 w-10">Model</th>
+                                <th class="text-white bg-transparent border-bottom-0 w-20">Asset Name</th>
+                                <th class="text-white bg-transparent border-bottom-0 w-10">Identification</th>
+                                <th class="text-white bg-transparent border-bottom-0 w-10 no-btn">Action</th>
+                            </tr>
+                        </thead>
+                        <tbody>
+                            @{
+                                int nCounter = 0;
+                                string sCounter = "0";
+                                string sIdentification = "";
+                                foreach (var disposal in Model.Disposals)
+                                {
+                                    nCounter++;
+                                    sCounter = nCounter < 10 ? '0' + nCounter.ToString() : nCounter.ToString();
+                                    sIdentification = disposal.Asset.SubCategory.CategoryId == 2
+                                    ? "Plate: " + disposal.Asset.Plate 
+                                    : "SN: " + disposal.Asset.SerialNo;
+
+                                    <tr>
+                                        <td>sCounter</td>
+                                        <td>@disposal.DisposalDate.ToString("dd-MMM-yyyy")</td>
+                                        <td>@disposal.Asset.SubCategory.SubCategoryName</td>
+                                        <td>@disposal.Asset.Make</td>
+                                        <td>@disposal.Asset.Model</td>
+                                        <td>@sIdentification</td>
+                                        <td></td>
+                                    </tr>
+                                }
+                            }
+                        </tbody>
+                    </table>
+                </div>
+            </div>
+        </div>
+    </div>
 </div>
+@section scripts{
+    <script>
+        $(document).ready(() => {
+            makeDataTable('#tblDisposals', 1);
+        });
+    </script>
+}
